Remove tabindex and introduce rel="noreferrer" where necessary

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
@@ -1,16 +1,16 @@
 ﻿<header id="header" role="banner">
-    <a tabindex="1" id="skip-to-main-content" href="#main-content">Skip to Main Content</a>
+    <a id="skip-to-main-content" href="#main-content">Skip to Main Content</a>
     <div class="container">
         <div class="row">
             <div class="col-xs-2 col-sm-5" id="logo-holder">
                 <button aria-label="Toggle menu" id="mega-menu-mobile"></button>
-                <a tabindex="2" href="https://www.nationalarchives.gov.uk" title="Go to The National Archives homepage"
+                <a href="https://www.nationalarchives.gov.uk" title="Go to The National Archives homepage"
                    class="visible-lg visible-md visible-sm">
                     <img src="~/images/logo-white.png" alt="The National Archives" class="img-responsive logo" />
                 </a>
             </div>
             <div class="col-xs-8 col-sm-2" id="mobile-logo-holder">
-                <button tabindex="5" title="Main menu" aria-label="Toggle menu" id="mega-menu-pull-down"
+                <button title="Main menu" aria-label="Toggle menu" id="mega-menu-pull-down"
                         class="hidden-xs">
                     <span>Menu</span>
                 </button>
