--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
@@ -30,8 +30,8 @@
                     <li><a href="http://bookshop.nationalarchives.gov.uk/">Bookshop</a></li>
                     <li><a href="https://images.nationalarchives.gov.uk/">Image library</a></li>
                     <li><a href="https://www.nationalarchives.gov.uk/webarchive/">UK Government Web Archive</a></li>
-                    <li><a href="https://www.legislation.gov.uk/" target="_blank" title="Opens a new window" rel="noopener noreferrer">Legislation.gov.uk<span class="sr-only">Opens a new window</span></a></li>
-                    <li><a href="https://www.thegazette.co.uk/" target="_blank" title="Opens a new window" rel="noopener noreferrer">The Gazette<span class="sr-only">Opens a new window</span></a></li>
+                    <li><a href="https://www.legislation.gov.uk/" target="_blank" rel="noreferrer" title="Opens a new window" rel="noopener noreferrer">Legislation.gov.uk<span class="sr-only">Opens a new window</span></a></li>
+                    <li><a href="https://www.thegazette.co.uk/" target="_blank" rel="noreferrer" title="Opens a new window" rel="noopener noreferrer">The Gazette<span class="sr-only">Opens a new window</span></a></li>
                 </ul>
             </div>
         </div>
@@ -62,24 +62,24 @@
             <div class="footer-col col-xs-12 col-sm-6 col-md-12">
                 <h3>Follow us</h3>
                 <div class="follow-us">
-                    <a href="https://twitter.com/@("UKNatArchives")" title="Follow us on Twitter - Opens a new window" target="_blank">
+                    <a href="https://twitter.com/@("UKNatArchives")" title="Follow us on Twitter - Opens a new window" target="_blank" rel="noreferrer">
                         <img src="https://www.nationalarchives.gov.uk/wp-content/themes/tna-base/img/social/twitter.png"
                              alt="Twitter logo">
                         <span class="sr-only">Opens a new window</span>
                     </a>
                     <a href="https://www.youtube.com/c/TheNationalArchivesUK" title="Follow us on YouTube - Opens a new window"
-                       target="_blank">
+                       target="_blank" rel="noreferrer">
                         <img src="https://www.nationalarchives.gov.uk/wp-content/themes/tna-base/img/social/youtube-play.png"
                              alt="YouTube logo">
                         <span class="sr-only">Opens a new window</span>
                     </a>
                     <a href="https://www.flickr.com/photos/nationalarchives" title="Follow us on Flickr - Opens a new window"
-                       target="_blank">
+                       target="_blank" rel="noreferrer">
                         <img src="https://www.nationalarchives.gov.uk/wp-content/themes/tna-base/img/social/flickr.png" alt="Flickr logo">
                         <span class="sr-only">Opens a new window</span>
                     </a>
                     <a href="https://www.facebook.com/TheNationalArchives" title="Follow us on Facebook - Opens a new window"
-                       target="_blank">
+                       target="_blank" rel="noreferrer">
                         <img src="https://www.nationalarchives.gov.uk/wp-content/themes/tna-base/img/social/facebook.png"
                              alt="Facebook logo">
                         <span class="sr-only">Opens a new window</span>
@@ -102,6 +102,6 @@
         <p>All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence v3.0</a>, <br />except where otherwise stated </p>
     </div>
     <div class="col-xs-12 col-sm-3 col-md-3 gov-uk">
-        <a class="footer-base-external-branding-gov-logo-adjust" title="External website - opens in a new window" href="https://gov.uk/" target="_blank"> <img alt="GOV.UK logo" src="https://www.nationalarchives.gov.uk/images/global/gov-uk.png" /> <span class="sr-only">Opens in a new window</span> </a>
+        <a class="footer-base-external-branding-gov-logo-adjust" title="External website - opens in a new window" href="https://gov.uk/" target="_blank" rel="noreferrer"> <img alt="GOV.UK logo" src="https://www.nationalarchives.gov.uk/images/global/gov-uk.png" /> <span class="sr-only">Opens in a new window</span> </a>
     </div>
 </div>
