Remove redundant ARIA roles
All of these roles are unnecessary since they exist to notify AT that the element
is that which they've been applied to.

--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Footer.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer id="footer" role="contentinfo">
+﻿<footer id="footer">
     <h2 class="sr-only">Footer</h2>
     @await Html.PartialAsync("Partials/_FooterNewsletter")
     <div class="footer-content">
