--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<header id="header" role="banner">
+﻿<header id="header">
     <a id="skip-to-main-content" href="#main-content">Skip to Main Content</a>
     <div class="container">
         <div class="row">
@@ -25,7 +25,7 @@
     </div>
 </header>
 
-<nav id="nav" role="navigation" class="navigation">
+<nav id="nav" class="navigation">
     <div class="mega-menu clearfix">
         @await Html.PartialAsync("Partials/_MegaMenu")
     </div>
