--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     @await Html.PartialAsync("Partials/_Header")
 
 
-    <main role="main" class="pb-3" id="main-content">
+    <main class="pb-3" id="main-content">
         <div class="container">
             @RenderBody()
         </div>
