--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterNewsletter.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterNewsletter.cshtml
@@ -9,7 +9,7 @@
             <div class="col-md-11">
                 <div class="news-content" id="newsletterAccessibility">
                     <h3>Sign me up to The National Archives' mailing list</h3>
-                    <p>Subscribe now for regular news, updates and priority booking for events.<br><a href="<?php echo $url ?>" class="button">Sign up</a></p>
+                    <p>Subscribe now for regular news, updates and priority booking for events.<br><a href="https://www.nationalarchives.gov.uk/contact-us/email-updates/" class="button">Sign up</a></p>
                 </div>
             </div>
         </div>
