--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
@@ -30,8 +30,8 @@
                     <li><a href="http://bookshop.nationalarchives.gov.uk/">Bookshop</a></li>
                     <li><a href="https://images.nationalarchives.gov.uk/">Image library</a></li>
                     <li><a href="https://www.nationalarchives.gov.uk/webarchive/">UK Government Web Archive</a></li>
-                    <li><a href="https://www.legislation.gov.uk/" target="_blank" rel="noreferrer" title="Opens a new window" rel="noopener noreferrer">Legislation.gov.uk<span class="sr-only">Opens a new window</span></a></li>
-                    <li><a href="https://www.thegazette.co.uk/" target="_blank" rel="noreferrer" title="Opens a new window" rel="noopener noreferrer">The Gazette<span class="sr-only">Opens a new window</span></a></li>
+                    <li><a href="https://www.legislation.gov.uk/" target="_blank" rel="noreferrer" title="Opens a new window">Legislation.gov.uk<span class="sr-only">Opens a new window</span></a></li>
+                    <li><a href="https://www.thegazette.co.uk/" target="_blank" rel="noreferrer" title="Opens a new window">The Gazette<span class="sr-only">Opens a new window</span></a></li>
                 </ul>
             </div>
         </div>
