Add 'content-wrapper' class and fix some contrast issues
The 'content-wrapper' class is necessary because previous styles made use of '.container'
(which has a broader purpose) when attached to section elements. Having changed many
section elements to be divs, the associated styles dropped off. The new class has
therefore been applied to those pages which were affected.

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div id="home" class="text-center">
 
-    <div class="container">
+    <div class="container content-wrapper">
 
         <div class="heading-text">
             <div class="row">
@@ -73,15 +73,16 @@
                 </div>
             </section>
         </div>
-    </div>
 
-    <section class="prompt">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Return to your booking</h2>
-                <p>You can view your order details for an existing visit using your booking reference number</p>
-                <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
+        <section class="prompt">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Return to your booking</h2>
+                    <p>You can view your order details for an existing visit using your booking reference number</p>
+                    <a href="@Url.Action("ReturnToBooking", "Home")">Find your existing visit</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+    </div>
 </div>
