--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -7,7 +7,7 @@ a.button {
     text-decoration: none;
 }
 
-section.container {
+.content-wrapper {
     background-color: #fff;
     margin-top: 2.4em;
     padding: 0em 2em 2em 2em;
@@ -16,6 +16,8 @@ section.container {
         margin-top: 2em;
     }
 }
+
+
 
 small {
     display: block;
@@ -353,7 +355,6 @@ form {
             display: inline-block;
             list-style: none;
             margin: 1em;
-            opacity: 0.3;
 
             .step-number {
                 padding: 1em;
@@ -370,7 +371,6 @@ form {
         }
 
         .active {
-            opacity: 1;
             font-weight: 700;
 
             .step {
