--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -11,7 +11,7 @@
 
 <div class="text-center">
 
-    <div class="container">
+    <div class="container content-wrapper">
 
         <div id="progress-bar">
             <div class="row">
