--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -10,7 +10,7 @@
 
 <div class="text-center">
 
-    <div class="container">
+    <div class="container content-wrapper">
 
         <div id="progress-bar">
             <div class="row">
