--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -12,7 +12,7 @@
 
 <div class="text-center">
 
-    <div class="container">
+    <div class="container content-wrapper">
 
         <div id="progress-bar">
             <div class="row">
