Add cookie banner

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -49,5 +49,6 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/mega-menu.js"></script>
+    <script src="~/js/cookie-banner.js"></script>
 </body>
 </html>
