--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_global.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_global.scss
@@ -13,7 +13,7 @@
 }
 
 a#cookieCutter {
-  background: url(../img/close-img.png) 0 2px no-repeat;
+  background: url(/images/close-img.png) 0 2px no-repeat;
   margin-left: 10px;
   padding-top: 1px;
   padding-left: 22px;
