--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -5706,7 +5706,7 @@ td.visible-print {
 }
 
 a#cookieCutter {
-  background: url(../img/close-img.png) 0 2px no-repeat;
+  background: url(/images/close-img.png) 0 2px no-repeat;
   margin-left: 10px;
   padding-top: 1px;
   padding-left: 22px;
