--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_Header.cshtml
@@ -6,7 +6,7 @@
                 <button aria-label="Toggle menu" id="mega-menu-mobile"></button>
                 <a href="https://www.nationalarchives.gov.uk" title="Go to The National Archives homepage"
                    class="visible-lg visible-md visible-sm">
-                    <img src="~/images/logo-white.png" alt="The National Archives" class="img-responsive logo" />
+                    <img src="~/images/logo-white.png" srcset="~/images/tna-horizontal-white-logo.svg" alt="The National Archives" class="img-responsive logo">
                 </a>
             </div>
             <div class="col-xs-8 col-sm-2" id="mobile-logo-holder">
