--- a/book-a-reading-room-visit.web/Views/Home/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/ReturnToBooking.cshtml
@@ -1,5 +1,4 @@
-﻿@using book_a_reading_room_visit.domain
-@using book_a_reading_room_visit.web.Helper
+﻿@using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
 
 @{
