--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -1,6 +1,6 @@
 ﻿@using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
-@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.model
 
 @{
     ViewData["Title"] = "Order documents";
@@ -68,7 +68,15 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="@Url.Action("CancelBooking", "Booking")">Cancel this booking ></a>
+                    <form action="@Url.Action("CancelBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="post">
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(Model => Model.BookingReference)
+                        @Html.Hidden("readerticket", Model.ReadingTicket)
+                        @Html.HiddenFor(Model => Model.SeatType)
+                        @Html.HiddenFor(Model => Model.BookingStartDate)
+                        @Html.HiddenFor(Model => Model.SeatNumber)
+                        <button type="submit" class="btn-link">Cancel this booking ></button>
+                    </form>
                 </div>
             </div>
         </div>
