--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -1,6 +1,7 @@
 ﻿@using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
-@using book_a_reading_room_visit.domain
+@using book_a_reading_room_visit.model
+
 @model AvailabilityViewModel
 @{
     ViewData["Title"] = "Visit availability";
