--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -39,50 +39,46 @@
                             To confirm your booking, complete the document order form by <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST).</span>
                         </p>
                     </div>
-                    <table>
-                        <tr>
-                            <td>
-                                <span class="bold-text">Visit type</span>
-                            </td>
-                            <td>
-                                @(Model.BookingType == BookingTypes.StandardOrderVisit ? "Standard order visit" : "Bulk order visit")
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="bold-text">Visit date</span>
-                            </td>
-                            <td>
-                                @($"{Model.BookingStartDate:dddd dd MMMM yyyy}")
-                            </td>
-                        </tr>
-                        @if (Model.BookingType == BookingTypes.StandardOrderVisit)
-                        {
+                    <table class="table">
+                        <tbody>
                             <tr>
+                                <th scope="row">Visit type</th>
                                 <td>
-                                    <span class="bold-text">Reading room</span>
-                                </td>
-                                <td>
-                                    @if (Model.SeatType == SeatTypes.StdRRSeat)
-                                    {
-                                        <p>Standard document reading room</p>
-                                    }
-                                    else
-                                    {
-                                        <p>Map and large document reading room</p>
-                                    }
+                                    @(Model.BookingType == BookingTypes.StandardOrderVisit ? "Standard order visit" : "Bulk order visit")
                                 </td>
                             </tr>
-                        }
-                        <tr>
-                            <td>
-                                <span class="bold-text">Seat number</span>
-                            </td>
-                            <td>
-                                @Model.SeatNumber
-                                <p>Based on availability, we may need to change your seat on the date of your visit.</p>
-                            </td>
-                        </tr>
+                            <tr>
+                                <th scope="row">Visit date</th>
+                                <td>
+                                    @($"{Model.BookingStartDate:dddd dd MMMM yyyy}")
+                                </td>
+                            </tr>
+                            @if (Model.BookingType == BookingTypes.StandardOrderVisit)
+                            {
+                                <tr>
+                                    <th scope="row">Reading room</th>
+                                    <td>
+                                        @if (Model.SeatType == SeatTypes.StdRRSeat)
+                                        {
+                                            <p>Standard document reading room</p>
+                                        }
+                                        else
+                                        {
+                                            <p>Map and large document reading room</p>
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                            <tr>
+                                <td>
+                                    <span class="bold-text">Seat number</span>
+                                </td>
+                                <td>
+                                    @Model.SeatNumber
+                                    <p>Based on availability, we may need to change your seat on the date of your visit.</p>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -93,7 +89,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <p>
                         A direct link to this form is also in your reservation confirmation email, so you can return to your document order at any point before
-                        <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST).</span> If you can’t see the reservation confirmation email in your inbox,
+                        <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy} at {Model.CompleteByDate:hh:mm tt}") British Summer Time (BST)</span>. If you can’t see the reservation confirmation email in your inbox,
                         check your spam and junk email folders.
                     </p>
                 </div>
@@ -105,7 +101,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <span class="col-md-6">
                         <a class="button primary" href="@Url.Action("OrderDocuments", "DocumentOrder",
-                                                new { bookingType = @Model.BookingType.ToStringURL(), bookingReference = Model.BookingReference, readerTicket = Model.ReadingTicket } )">Continue booking now</a>
+                                                new { bookingType = @Model.BookingType.ToStringURL(), bookingReference = Model.BookingReference, readerTicket = Model.ReaderTicket } )">Continue booking now</a>
                     </span>
 
                     <span class="col-md-6">
